# Lifesync

./: .gitignore  LIFESYNC_TEST_DOCUMENTATION.md  README.md  SYSTEM_DESIGN_OVERVIEW.md  SYSTEM_STATUS_REPORT.md  pyproject.toml  test_auth.py  test_lifesync_app.py
life_sync_frontend/: index.html  package-lock.json  package.json  server.js  vite.config.js
life_sync_frontend/public/: index.html  manifest.json  sw.js
life_sync_frontend/src/: App.jsx  AppRoutes.jsx  index.html
life_sync_frontend/src/components/: ProtectedRoute.jsx  index.js
life_sync_frontend/src/contexts/: AuthContext.jsx  OfflineContext.jsx  TasksContext.jsx  ThemeContext.jsx
life_sync_frontend/src/hooks/: useTasks.js  (+1 more)
lifesync_ai_backend/: .env  create_tables.py  pyproject.toml  requirements.txt  start_server.py  upcoming.txt
lifesync_ai_backend/app/: main.py
lifesync_ai_backend/app/api/: routes.py
lifesync_ai_backend/app/api/v1/: api.py
lifesync_ai_backend/app/api/v1/endpoints/: auth.py  collaboration.py  documents.py  export.py  goals.py  habits.py  notifications.py  scheduling.py  sync.py  tasks.py  wellness.py
lifesync_ai_backend/app/core/: config.py  database.py
lifesync_ai_backend/app/models/: collaboration_models.py  goal_models.py  habit_models.py  models.py
lifesync_ai_backend/app/schemas/: habits.py  task.py  task_schemas.py  user.py  wellness.py
lifesync_ai_backend/app/services/: ai_service.py  auth.py  collaboration_service.py  document_processor.py  goals_service.py  habit_learning.py  llama_service.py  notification_service.py  scheduling_service.py  tasks_service.py
(+76 files in other folders)
